hide hamburger menu on mobile and fix scroll button

--- a/_sass/_fedgeoday.scss
+++ b/_sass/_fedgeoday.scss
@@ -13,3 +13,8 @@ $orange: #fdaf17;
 .black-text-shadow {
   text-shadow: 2px 2px black;
 }
+
+// hide hamburger menu
+.toggle-menu {
+  display: none !important;
+}
